--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,21 @@
 .App {
   text-align: center;
+  display: flex;
+  background-color: #282c34;
+  color: white;
+  position: absolute;
+  top:0;bottom:0;right:0;left:0;
+}
+
+.sidemenu {
+  width: 260px;
+  padding: 10px;
+  background-color: #202123;
+}
+
+.chatbox {
+  flex: 1;
+  background-color: #343541;
 }
 
 .App-logo {
