--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,24 @@
   background-color: #202123;
 }
 
+.side-menu-button {
+  padding: 12px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  text-align: left;
+  transition: ease 0.2s all;
+}
+
+.plus-button {
+  height: 10px;
+  margin-right: 10px;
+}
+
+.side-menu-button:hover {
+  background-color: rgba(255,255,255,0.1);
+  cursor: pointer;
+}
+
 .chatbox {
   flex: 1;
   background-color: #343541;
