--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
   color: white;
   position: absolute;
   top:0;bottom:0;right:0;left:0;
+  user-select: none;
 }
 
 .sidemenu {
@@ -19,6 +20,7 @@
   border-radius: 5px;
   text-align: left;
   transition: ease 0.2s all;
+  user-select: none;
 }
 
 .plus-button {
@@ -29,6 +31,7 @@
 .side-menu-button:hover {
   background-color: rgba(255,255,255,0.1);
   cursor: pointer;
+
 }
 
 .chatbox {
