--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,6 +39,7 @@
   background-color: #343541;
   padding-right: 5%;
   padding-left: 5%;
+  position: relative;
 }
 
 .App-logo {
@@ -54,7 +55,7 @@
 
 .chat-input-textarea {
   background-color: #40414f;
-  width: 100%;
+  width: 90%;
   padding: 12px;
   border-radius: 5px;
   color: whitesmoke;
@@ -62,11 +63,14 @@
   margin: 12px;
   padding-left: 11px;
   outline: none;
-  box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.25);
 }
 
 .chat-input-holder {
-  padding: 12px;
+  padding: 24px;
+  position: absolute;
+  bottom: 0;
+  left: 0;right:0;
 }
 
 .App-header {
@@ -78,6 +82,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.interface-heading {
+  margin-top: 35%;
 }
 
 .App-link {
