--- a/client/src/App.css
+++ b/client/src/App.css
@@ -88,15 +88,17 @@
   margin-top: 13rem;
   margin-bottom: 3rem;
   user-select: text;
+  font-size: 30px;
 }
 
 .parent {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-column-gap: 11px;
+  grid-row-gap: 11px;
   user-select: text;
+  font-size: 14px;
   }
   
   .div1 { 
@@ -109,20 +111,68 @@
   }
   .div3 { 
     grid-area: 1 / 3 / 2 / 4; 
-  
   }
   .div4 { 
     grid-area: 2 / 1 / 3 / 2; 
     background-color: #43444d;
     border-radius: 5px;
+    padding: 8px 8px;
   }
   .div5 { 
     grid-area: 2 / 2 / 3 / 3; 
-  
+    background-color: #43444d;
+    border-radius: 5px;
+    padding: 8px 8px;
   }
   .div6 { 
     grid-area: 2 / 3 / 3 / 4; 
-  
+    background-color: #43444d;
+    border-radius: 5px;
+    padding: 8px 8px;
+
+  }
+  .div6 { 
+    grid-area: 2 / 3 / 3 / 4; 
+    background-color: #43444d;
+    border-radius: 5px;
+    padding: 8px 8px;
+  }
+  .div7 { 
+    grid-area: 3 / 1 / 4 / 2;
+    background-color: #43444d;
+    border-radius: 5px; 
+    padding: 8px 8px;
+  }
+  .div8 { 
+    grid-area: 3 / 2 / 4 / 3;
+    background-color: #43444d;
+    border-radius: 5px; 
+    padding: 8px 8px;
+
+  }
+  .div9 { 
+    grid-area: 3 / 3 / 4 / 4;
+    background-color: #43444d;
+    border-radius: 5px; 
+    padding: 8px 8px;
+  }
+  .div10 { 
+    grid-area: 4 / 1 / 5 / 2;
+    background-color: #43444d;
+    border-radius: 5px; 
+    padding: 8px 8px;
+  }
+  .div11 { 
+    grid-area: 4 / 2 / 5 / 3;
+    background-color: #43444d;
+    border-radius: 5px; 
+    padding: 8px 8px;
+  }
+  .div12 { 
+    grid-area: 4 / 3 / 5 / 4;
+    background-color: #43444d;
+    border-radius: 5px; 
+    padding: 8px 8px;
   }
 
 .App-link {
