--- a/client/src/App.css
+++ b/client/src/App.css
@@ -190,15 +190,17 @@
 }
 
 .avatar {
-  background:white;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  background: white;
+  border-radius: 1rem;
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
 }
 
 .message {
   padding-left: 40px;
   padding-right: 40px;
+  user-select: text;
 }
 
 @media screen and (min-width: 1080px){
