--- a/client/src/App.css
+++ b/client/src/App.css
@@ -183,10 +183,18 @@
 }
 
 .chat-message {
-  padding: 12px;
+  
+}
+
+.chat-message-center {
+  max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding: 12px;
+  padding-left: 24px;
+  padding-right: 24px;
+  background-color: rgba(255,255,255,0.1);
 }
 
 .avatar {
